# cumulus-publish-cnm

./: CHANGELOG.md  README.rst  build.sh  pyproject.toml
.github/workflows/: build-pipeline.yml
cumulus_publish_cnm/: cumulus_publish_cnm.py
tests/: test_cumulus_publish_cnm.py
