[tool.poetry]
name = "cumulus-publish-cnm"
version = "0.1.0"
description = "Reads in list of CNM's and publishes to SNS topic"
authors = ["Hong-Kit Randy Yeung <hong-kit.r.yeung@jpl.nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
boto3 = "^1.21.10"
moto = "^3.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
